# coverage-path-planning

./: .gitignore  CMakeLists.txt  LICENSE  readme.txt
coverage path planning/: Adds.cpp  Adds.h  Header.h  Source.cpp  coverage path planning m7.cpp
include/common/: CellMapCreator.hpp  ColourDefinitions.hpp  Coord.hpp  CoordMapper.hpp  ImageMarker.hpp  Shifts.hpp  Types.hpp
include/global_path_planner/: DistanceTransformer.hpp  GlobalPathPlanner.hpp  ObstacleTransformer.hpp  PathTransformer.hpp
include/inflator/: Inflator.hpp
include/local_path_planner/: LocalPathPlanner.hpp
include/path_analizer/: PathAnalizer.hpp
samples/: coverage_path_planner.cpp  global_path_planner.cpp  inflator.cpp  local_path_planner.cpp
src/common/: CellMapCreator.cpp  CoordMapper.cpp  ImageMarker.cpp
src/global_path_planner/: DistanceTransformer.cpp  GlobalPathPlanner.cpp  ObstacleTransformer.cpp  PathTransformer.cpp
src/inflator/: Inflator.cpp
src/local_path_planner/: LocalPathPlanner.cpp
src/path_analizer/: PathAnalizer.cpp
